force-app/main/default/objects/Advance_Workflow__c/Advance_Workflow__c.object-meta.xml
<CustomObject>
    <description>This object holds the definition of the workflows for standard and custom objects</description>
    <label>Advance Workflow</label>
    <nameField>
        <label>Advance Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advance Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>