force-app/main/default/objects/Advance_Workflow__c/fields/CountRulesassociatedtoAdvanceWorkflow__c.field-meta.xml
<CustomField>
    <fullName>CountRulesassociatedtoAdvanceWorkflow__c</fullName>
    <label>#of Rules associated to Advance Workflow</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>