force-app/main/default/objects/Advance_Workflow__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Holds the description of the Workflow</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>