force-app/main/default/objects/Advance_Workflow__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advance Workflow doesn&apos;t trigger rule execution until you activate it. To activate a workflow rule, click Enable on the workflow rule detail page. Click Deactivate to prevent  Advance Workflow rules associated to an object  from triggering</description>
    <inlineHelpText>Advance Workflow doesn&apos;t trigger rule execution until you activate it. To activate a workflow rule, click Enable on the workflow rule detail page. Click Deactivate to prevent  Advance Workflow rules associated to an object  from triggering</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>