force-app/main/default/objects/Advance_Workflow__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Captures the Object Name ( Standard or Custom ) for which the advance workflow is created</description>
    <inlineHelpText>Captures the Object Name ( Standard or Custom ) for which the advance workflow is created</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>