force-app/main/default/objects/Advance_Workflow__c/validationRules/Unique_Rule_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Rule_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (ISNEW() ||  ISCHANGED(Name)) &amp;&amp; Name =  VLOOKUP( $ObjectType.Advance_Workflow__c.Fields.Name ,  $ObjectType.Advance_Workflow__c.Fields.Name , Name),true,false )</errorConditionFormula>
    <errorMessage>Advance Workflow Name  must be Unique</errorMessage>
</ValidationRule>